--- a/en/Speare.html
+++ b/en/Speare.html
@@ -91,7 +91,7 @@ The free small IDE for scripting languages.
 <tr><td>4</td><td>GTK+</td><td>Mature cross-platform GUI framework</td><td>Best for Linux but not suitable for macOS GUI app</td></tr>
 <tr><td>5</td><td>Tcl/Tk</td><td>Rapid GUI app development kit</td><td>Lack low level native OS support features</td></tr>
 <tr><td>6</td><td>Java Swing</td><td>Rapid development, mature cross-platform GUI kit</td><td>Low performance with huge run-time</td></tr>
-<tr><td>7</td><td>C# + .NET</td><td>Fast implementing GUI app</td><td>Best for Windows but not suitable for macOS GUI app</td></tr>
+<tr><td>7</td><td>C# + .NET</td><td>Fast implementing GUI app</td><td>Suitable for Windows but not suitable for macOS GUI app, Mono required (6.10 362.3MB!).</td></tr>
 <tr><td>8</td><td>Native Cocoa</td><td>Mature, reliable, high performance</td><td>Best frameworks to build macOS app</td></tr>
 </table>
 <p>Speare code editor was developing based on the native pure Cocoa frameworks with leveraging several C library results a very small footprint, high performance, small memory and storage runtime consuming, and ultra small distribution. Only 1.1MB executable!</p>
