--- a/en/about.html
+++ b/en/about.html
@@ -40,14 +40,12 @@ Rebuild foundational technologies of computer system from scratch!</p>
 </div>
 
 <div class="smallscreen">
+<div style="height:100vh; width:vw;">
 <a href="../images/ParaOS.png" target="_blank"><img src="../images/ParaOS.png" class="screenshots"><br>
 </div>
-
 <p><audio autoplay loop preload="none"><source src="../audio/life.mp3" type="audio/mpeg" /></audio></p>
+</div>
 
-
-<!--div style="height:100vh; width:vw;"></div-->
-<p><br><br><br><br><br></p>
 
 </div>
 </div>
