--- a/en/service.html
+++ b/en/service.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta property="og:title" content="Independent music product development and artworks design.">
+<meta property="og:title" content="senior business consulting services.">
 <meta property="og:type" content="product">
 <meta property="og:url" content="http://www.sevenuc.com/">
 <meta property="og:image" content="http://www.sevenuc.com/favicon.ico">
@@ -9,8 +9,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1">
-<meta name="description" content="Reliable partner for music product development and artworks design.">
-<meta name="service" content="Independent music product development and artworks design.">
+<meta name="description" content="senior business consulting services.">
+<meta name="service" content="senior business consulting services.">
 <meta name="author" content="http://www.sevenuc.com/">
 <meta name="keywords" content="Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
 <link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
@@ -22,7 +22,7 @@
 <div id="header_wrap" class="outer">
     <header class="inner">
       <h1 id="project_title">Services</h1>
-      <h2 id="project_tagline">Reliable partner for music product development and artworks design.</h2>
+      <h2 id="project_tagline">senior business consulting services.</h2>
     </header>
 </div>
 
@@ -30,14 +30,14 @@
 <div id="main_content_wrap" class="outer">
 <section id="main_content" class="inner">
 
+
+<div style="height:100vh; width:vw;">
 <p><a href="../images/wave.png" target="_blank"><img src="../images/wave.png" style="height:220px;width:auto;float:left; margin-top:0.2em;margin-right:1em;margin-bottom:0.5em;max-width:100%;"></a>
-We provides you senior music product development and artworks design service, high-quality music creating, from modern style to very rare chip music style, from TV music, film music, to game music, mobile music, web music and chip music; from game box platform to desktop and cloud service integrated complete solutions. Sevenuc Consulting have more than 10 years of music market experience in extremely industry styles, provides you the best solution from a number of design options. We always create creative magic sound to help our clients meet their largest business challenges, continuing learn a variety of very rare sound effect and focus on growing a strong set of music styles and making skills, then progressing them into music creating.</p>
-
-<p>By using our industry-leading technology research, advanced music making technology, we gaining an understanding of the unique business on each engagement to facilitate the most appropriate music creating and artworks design, we analyses and develops music product to solve our clients' complex business requirements and help them spreading their business information. We also especially have rich experience in managing the various stages of music product development, and advise our clients with innovative solutions to better run their business and frequently go above and beyond expectation of them.</p>
-<p><br><br><br><br><br></p>
-
-<!--div style="height:100vh; width:vw;"></div-->
+</p>
+<p></p>
 <p><audio autoplay loop preload="none"><source src="../audio/life.mp3" type="audio/mpeg" /></audio></p>
+</div>
+
 
 
 </div>
