--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta property="og:title" content="Music product development and artworks design.">
+<meta property="og:title" content="Sevenuc Consulting.">
 <meta property="og:type" content="product">
 <meta property="og:url" content="http://www.sevenuc.com/">
 <meta property="og:image" content="http://www.sevenuc.com/favicon.ico">
@@ -9,8 +9,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1">
-<meta name="description" content="Music product development and artworks design.">
-<meta name="service" content="Music creating services.">
+<meta name="description" content="senior business consulting services.">
+<meta name="service" content="senior business consulting services.">
 <meta name="author" content="http://www.sevenuc.com/">
 <meta name="keywords" content="Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence">
 <link rel="stylesheet" type="text/css" media="screen" href="http://www.sevenuc.com/css/stylesheet.css">
@@ -23,11 +23,12 @@
 </head>
 <body>
 
+
 <!-- HEADER -->
 <div id="header_wrap" class="outer">
     <header class="inner">
-      <h1 id="project_title">Music Creating Services</h1>
-      <h2 id="project_tagline">Music product development and artworks design.</h2>
+      <h1 id="project_title"></h1>
+      <h2 id="project_tagline">The further is back to the beginning.</h2>
     </header>
 </div>
 
@@ -35,18 +36,15 @@
 <div id="main_content_wrap" class="outer">
 <section id="main_content" class="inner">
 
-<h2></h2>
-<p style="display:none;">Cross border music creating and artworks design for<br>
-TV music, film music, game music, mobile music, web music, chip music, and more.<br><br>
-</p>
+
+<div style="height:100vh; width:vw;">
 
 <div class="smallscreen">
-<a href="http://www.sevenuc.com/images/ParaOS.png" target="_blank"><img src="http://www.sevenuc.com/images/ParaOS.png" class="screenshots">
+<a href="http://www.sevenuc.com/images/title-hero.png" target="_blank"><img src="http://www.sevenuc.com/images/title-hero.png" style="height:220px;width:auto;float:left; margin-top:0.2em;margin-right:1em;margin-bottom:0.5em;max-width:100%;">
 </div>
 
+</div>
 
-<!--div style="height:100vh; width:vw;"></div-->
-<p><br><br><br><br><br><br><br></p>
 <!--p><audio autoplay loop preload="none"><source src="http://www.sevenuc.com/audio/bamboo.mp3" type="audio/mpeg" /></audio></p-->
 <p><audio autoplay loop preload="none" id="myaudio">
 <source src="http://www.sevenuc.com/audio/ripples.mp3" type="audio/mpeg" />
