--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <!-- HEADER -->
 <div id="header_wrap" class="outer">
     <header class="inner">
-      <h1 id="project_title"></h1>
-      <h2 id="project_tagline">The further is back to the beginning.</h2>
+      <h1 id="project_title">道の世界</h1>
+      <h2 id="project_tagline">The world following the Tao.</h2>
     </header>
 </div>
 
@@ -40,10 +40,8 @@
 <div style="height:100vh; width:vw;">
 
 <div class="smallscreen">
-<a href="http://www.sevenuc.com/images/title-hero.png" target="_blank"><img src="http://www.sevenuc.com/images/title-hero.png" style="height:220px;width:auto;float:left; margin-top:0.2em;margin-right:1em;margin-bottom:0.5em;max-width:100%;">
-</div>
 
-</div>
+<!--a href="http://www.sevenuc.com/images/title-hero.png" target="_blank"><img src="http://www.sevenuc.com/images/title-hero.png" style="height:220px;width:auto;float:left; margin-top:0.2em;margin-right:1em;margin-bottom:0.5em;max-width:100%;"-->
 
 <!--p><audio autoplay loop preload="none"><source src="http://www.sevenuc.com/audio/bamboo.mp3" type="audio/mpeg" /></audio></p-->
 <p><audio autoplay loop preload="none" id="myaudio">
