--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <!-- HEADER -->
 <div id="header_wrap" class="outer">
     <header class="inner">
-      <h1 id="project_title">道の世界</h1>
-      <h2 id="project_tagline">The world following the Tao.</h2>
+      <h1 id="project_title"></h1>
+      <h2 id="project_tagline"></h2>
     </header>
 </div>
 
