--- a/en/index.html
+++ b/en/index.html
@@ -41,7 +41,7 @@
 
 <div class="smallscreen">
 
-<!--a href="http://www.sevenuc.com/images/title-hero.png" target="_blank"><img src="http://www.sevenuc.com/images/title-hero.png" style="height:220px;width:auto;float:left; margin-top:0.2em;margin-right:1em;margin-bottom:0.5em;max-width:100%;"-->
+<a href="http://www.sevenuc.com/images/invisible-wall.png" target="_blank"><img src="http://www.sevenuc.com/images/invisible-wall.png" style="float:left; margin-top:0.2em;margin-right:1em;margin-bottom:0.5em;max-width:100%;">
 
 <!--p><audio autoplay loop preload="none"><source src="http://www.sevenuc.com/audio/bamboo.mp3" type="audio/mpeg" /></audio></p-->
 <p><audio autoplay loop preload="none" id="myaudio">
