--- a/en/debugger.html
+++ b/en/debugger.html
@@ -17,7 +17,6 @@
 <style type="text/css">
 .logo {  height:42px;  width: auto; }
 .none {  padding:0;  margin: 0; }
-.yell {color:#cce619;font-weight: bold;}
 /*.green {color: #007f00;font-weight: bold;}*/
 .treasure { color: rgba(0, 0, 0, 0.7); font-style: italic; font-weight: bold; background: none; }
 </style>
@@ -76,7 +75,7 @@ The free small IDE for scripting languages.
 </p>
 
 <p><a href="https://apps.apple.com/us/app/speare-pro/id1477773605?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br>
-<p>If you can't open the link above, please launch App Store and found <lt>"Speare - Donate version"</lt> by searching.</p>
+<p>If you can't open the link above, please launch App Store and found <lt>"Speare pro"</lt> by searching.</p>
 <p><span><a href="../images/Speare/4.png" target="_blank"><img src="../images/Speare/4.png" style="width:480px;height:auto;"/></a></span><br>
 <span><a href="../images/Speare/5.png" target="_blank"><img src="../images/Speare/5.png" style="width:480px;height:auto;"/></a></span><br>
 <span><a href="../images/Speare/6.png" target="_blank"><img src="../images/Speare/6.png" style="width:480px;height:auto;"/></a></span><br>
