--- a/en/debugger.html
+++ b/en/debugger.html
@@ -506,7 +506,8 @@ You can switch any version of PHP interpreter directly, it does not affect the s
 
 
 <h2>About Perl</h2>
-<p>There exists huge number of mature and reliable Perl modules in cpan, as a general-purpose Unix scripting language, Perl is the most suitable programming language to resolve your problem at some situation, from the server side powerful tool such as load balancer to web applications, and large scale enterprise applications.</p>
+<p>There exists huge number of mature and reliable Perl modules in cpan, as a general-purpose Unix scripting language, Perl is the most suitable programming language to resolve your problem at some situation, from command line tool to the server side powerful tool such as load balancer, to very large web applications, blog, wiki, forum, and large scale enterprise applications. In my several personal experience, Perl resolved the special problems but ruby and python can't!</p>
+
 
 <a name="tcl"></a><br>
 <h2>Tcl Debugger</h2>
