--- a/en/Speare.html
+++ b/en/Speare.html
@@ -50,7 +50,7 @@ The free small IDE for scripting languages.
 (c) 2020 http://www.sevenuc.com
 </pre></div>
 
-<p><a href="http://www.sevenuc.com/en/Speare.html">Speare </a>code editor is a small, free and friendly code editor, and a really ultra light IDE. You can use it to edit all kinds of text file, programming and debugging with almost all common programming languages. It designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend the IDE to support special developing requirements and easily to add a new programming language in it. Speare code editor includes <a href="debugger.html" target="_blank">builtin debugging environment</a> for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give you complete freedom to control and customise a debugging environment for any programming language.</p>
+<p><a href="http://www.sevenuc.com/en/speare.html">speare code editor</a> is a small, free and friendly code editor, and a really ultra light IDE. You can use it to edit all kinds of text file, programming and debugging with almost all common programming languages. It designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend the IDE to support special developing requirements and easily to add a new programming language in it. Speare code editor includes <a href="debugger.html" target="_blank">builtin debugging environment</a> for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give you complete freedom to control and customise a debugging environment for any programming language.</p>
 
 
 <p>The offline document: <a target="_blank" href="http://www.sevenuc.com/download/Speare_quick_reference.pdf">Speare_quick_reference.pdf</a></p>
@@ -116,10 +116,11 @@ The free small IDE for scripting languages.
 
 
 <h2>Screenshot</h2>
-<a href="../images/Speare/9.png" target="_blank"><img src="../images/Speare/9.png" class="screenshots"/></a><br>
-<a href="../images/Speare/1.png" target="_blank"><img src="../images/Speare/1.png" class="screenshots"/></a><br>
-<a href="../images/Speare/2.png" target="_blank"><img src="../images/Speare/2.png" class="screenshots"/></a><br>
-<a href="../images/Speare/3.png" target="_blank"><img src="../images/Speare/3.png" class="screenshots"/></a>
+<a href="../images/speare/0.png" target="_blank"><img src="../images/speare/0.png" class="screenshots"/></a><br>
+<a href="../images/speare/9.png" target="_blank"><img src="../images/speare/9.png" class="screenshots"/></a><br>
+<a href="../images/speare/1.png" target="_blank"><img src="../images/speare/1.png" class="screenshots"/></a><br>
+<a href="../images/speare/2.png" target="_blank"><img src="../images/speare/2.png" class="screenshots"/></a><br>
+<a href="../images/speare/3.png" target="_blank"><img src="../images/speare/3.png" class="screenshots"/></a><br>
 <br>
 
 
@@ -187,17 +188,17 @@ Click toolbar "Breakpoints": all breakpoint (bookmark) of current file will be r
 	Directly dragging the .spp file into Treeview, or select menu "File"  →  "Open",  will load all indexed file and folder stored in the .spp file into the left side Treeview (Workspace Explorer).</li>
 </ol></p>
 <!--p><i><lt>Warning: when load a SPP File, current project will be removed!</i></lt></p-->
-<p class="green"><span><img src="../images/Speare/tips.png" class="tips" /></span>When switch to another project, it is necessarily required to save current project so that the project meta information stored in .spp file and can be restore later otherwise these information will lost!</p>
+<p class="green"><span><img src="../images/speare/tips.png" class="tips" /></span>When switch to another project, it is necessarily required to save current project so that the project meta information stored in .spp file and can be restore later otherwise these information will lost!</p>
 
 <h2>Search and Replace</h2>
 <ol><li><b>Search Current Document:</b><br>a. Use the shortcut key "Control + F" to do the searching just like in TextEdit.<br>
-b. Click <img src="../images/Speare/search.png" class="button" /> search button on the toolbar and on the prompt dialog select "Current File".<br><br></li>
-<li><b>Search Current Folder:</b><br>Click <img src="../images/Speare/search.png" class="button" /> search button on the toolbar and on the prompt dialog select "Current Folder".<br><br></li>
-<li><b>Search Opened Files:</b><br>Click <img src="../images/Speare/search.png" class="button" /> search button on the toolbar and on the prompt dialog select "In Opened Tabs".<br><br></li>
-<li><b>Search Entire Project Folders:</b><br>Click <img src="../images/Speare/search.png" class="button" /> search button on the toolbar and on the prompt dialog select "In Entire Project".<br><br></li>
+b. Click <img src="../images/speare/search.png" class="button" /> search button on the toolbar and on the prompt dialog select "Current File".<br><br></li>
+<li><b>Search Current Folder:</b><br>Click <img src="../images/speare/search.png" class="button" /> search button on the toolbar and on the prompt dialog select "Current Folder".<br><br></li>
+<li><b>Search Opened Files:</b><br>Click <img src="../images/speare/search.png" class="button" /> search button on the toolbar and on the prompt dialog select "In Opened Tabs".<br><br></li>
+<li><b>Search Entire Project Folders:</b><br>Click <img src="../images/speare/search.png" class="button" /> search button on the toolbar and on the prompt dialog select "In Entire Project".<br><br></li>
 <li><b>Searching by Index:</b><br><br>
-<ltab>a. Click <img src="../images/Speare/class.png" class="button" /> symbol button on the toolbar and select items that parsed by the build-in syntax parsers.</ltab><br><br>
-<ltab>b. Click <img src="../images/Speare/break.png" class="button" /> breakpoint button on the toolbar and select items that placed as bookmark or breakpoint.</ltab><br><br>
+<ltab>a. Click <img src="../images/speare/class.png" class="button" /> symbol button on the toolbar and select items that parsed by the build-in syntax parsers.</ltab><br><br>
+<ltab>b. Click <img src="../images/speare/break.png" class="button" /> breakpoint button on the toolbar and select items that placed as bookmark or breakpoint.</ltab><br><br>
 </li>
 <li><b>Searching items in left side Treeview:</b><br>Input the item name (or prefix or suffix, or contained word) in the search field which located in the bottom of the left side Treeview and then enter "Return" key, click up and down arrow right side of the search field to iterate items.</li></ol></p>
 <p><ltab><b>Brief &amp; History</b>: each search result has brief of the source line and all be classified, and the history of search words remembered automatically, click the down arrow of the search field will allow to select the searched items in history.</ltab></p>
@@ -259,7 +260,7 @@ Put you customised colour scheme in the following directory:<br>
 <p>1. <b>Preview</b>: select menu "View"  →  "Preview", see html or markdown file rendered in builtin web browser instantly.<br>
 2. <b>Close Preview</b>: select menu "View"  →  "Close Preview", close the opened builtin web browser.<br>
 3. <b>Save Markdown</b>: select menu "View"  →  "Save Markdown", save the generated html to local file, Speare has a builtin converter that can convert markdown to html instantly.</p>
-<p class="green"><span><img src="../images/Speare/tips.png" class="tips" /><b>Note:</b> a. supported file extensions: .htm, .html, .md, .mdown, .markdown.<br>
+<p class="green"><span><img src="../images/speare/tips.png" class="tips" /><b>Note:</b> a. supported file extensions: .htm, .html, .md, .mdown, .markdown.<br>
 <span style="margin-left:68px;"> b. click any file item in the left side Treeview will also close preview automatically.</span></p>
 
 <h2>Code Formatter</h2>
