--- a/en/apps.html
+++ b/en/apps.html
@@ -45,8 +45,8 @@
 <a href="MathHelfer.html"><b>MathHelfer</b></a> is an ultra lightweight word processor help you write well formatted science article in a very light and efficient way without install huge software packages such as TEX and Office Suite.</p>
 
 
-<p class="section"><a href="Speare.html"><img src="../images/Speare/logo.png" class="macapp" /></a>
-<a href="Speare.html"><b>Speare</b></a> is an ultra lightweight code editor and a small IDE that provides debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl. Speare code editor has very efficient code navigation and call routines tracing ability and a very simple interface that allows end user to add a new programming language code runner, parser, syntax highlighting, code formatter and debugger to it.</p>
+<p class="section"><a href="speare.html"><img src="../images/speare/logo.png" class="macapp" /></a>
+<a href="speare.html"><b>Speare</b></a> is an ultra lightweight code editor and a small IDE that provides debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl. Speare code editor has very efficient code navigation and call routines tracing ability and a very simple interface that allows end user to add a new programming language code runner, parser, syntax highlighting, code formatter and debugger to it.</p>
 
 <p class="section"><a href="littlefox.html"><img src="../images/littlefox/logo.png" class="macapp" /></a>
 <a href="littlefox.html"><b>LittleFox</b></a> is a small tool designed to help user share audio or video on social websites or make slideshows with speech audio and picture in a simple and efficient way. It was developed to conveniently synthesis subtitle with video or audio without traditional boring works.</p>
