--- a/en/speare.html
+++ b/en/speare.html
@@ -42,7 +42,7 @@ lt {color:#007f00;}
 <section id="main_content" class="inner">
 
 <div class="smallscreen">
-<img src="../images/Speare/logo.png" style="height: 110px;width:auto" /><br>
+<img src="../images/speare/logo.png" style="height: 110px;width:auto" /><br>
 <!--h2>Speare Code Editor<br><em> Version 1.2.74 </em><br><em class="green">The free small IDE for scripting languages.</em></h2-->
 <div><pre class="green">
 Speare v1.2.80
