--- a/en/debugger.html
+++ b/en/debugger.html
@@ -38,7 +38,7 @@
 <div class="smallscreen">
 
 <!--
-<img src="../images/Speare/logo.png" style="height: 110px;width:auto" /><br>
+<img src="../images/speare/logo.png" style="height: 110px;width:auto" /><br>
 <h2> Speare <br><em> Version 1.0 </em></h2>
 -->
 
@@ -76,18 +76,18 @@ The free small IDE for scripting languages.
 
 <p><a href="https://apps.apple.com/us/app/speare-pro/id1477773605?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br>
 <p>If you can't open the link above, please launch App Store and found <lt>"Speare pro"</lt> by searching.</p>
-<p><span><a href="../images/Speare/4.png" target="_blank"><img src="../images/Speare/4.png" style="width:480px;height:auto;"/></a></span><br>
-<span><a href="../images/Speare/5.png" target="_blank"><img src="../images/Speare/5.png" style="width:480px;height:auto;"/></a></span><br>
-<span><a href="../images/Speare/6.png" target="_blank"><img src="../images/Speare/6.png" style="width:480px;height:auto;"/></a></span><br>
-<span><a href="../images/Speare/7.png" target="_blank"><img src="../images/Speare/7.png" style="width:480px;height:auto;"/></a></span><br>
-<span><a href="../images/Speare/10.png" target="_blank"><img src="../images/Speare/10.png" style="width:480px;height:auto;"/></a></span>
+<p><span><a href="../images/speare/4.png" target="_blank"><img src="../images/speare/4.png" style="width:480px;height:auto;"/></a></span><br>
+<span><a href="../images/speare/5.png" target="_blank"><img src="../images/speare/5.png" style="width:480px;height:auto;"/></a></span><br>
+<span><a href="../images/speare/6.png" target="_blank"><img src="../images/speare/6.png" style="width:480px;height:auto;"/></a></span><br>
+<span><a href="../images/speare/7.png" target="_blank"><img src="../images/speare/7.png" style="width:480px;height:auto;"/></a></span><br>
+<span><a href="../images/speare/10.png" target="_blank"><img src="../images/speare/10.png" style="width:480px;height:auto;"/></a></span>
 </p>
 
 
 <h2>Debug Mode</h2>
-<p>1. Click <span><img src="../images/Speare/bottom.png" class="button" /></span> siding bottom button to show the debug toolbar.</p>
+<p>1. Click <span><img src="../images/speare/bottom.png" class="button" /></span> siding bottom button to show the debug toolbar.</p>
 <p>2. Debug toolbar:<br><br>
-<a href="../images/Speare/debug_toolbar.png" target="_blank"><span><img src="../images/Speare/debug_toolbar.png" /></span></a><br><br>
+<a href="../images/speare/debug_toolbar.png" target="_blank"><span><img src="../images/speare/debug_toolbar.png" /></span></a><br><br>
 From left to right, Start, Stop, Step Into, Step Out, Run To, Step Over, Show Watches. The "Step Over" is equals to "Step next", and "Step To" is equals to "Continue" in common debugging words, and the "Step To" is the command that tell the debugger run to meet a breakpoint or an exception occurred or the program meet exit. On the rightmost there are three other function units, they are, search items in the stackview, siding stackview, and clean debug output. <br><br>
 <b>Search in the debug output:</b> click in the output area and use the shortcut key "Control + F" to do the searching.
 </p>
@@ -106,7 +106,7 @@ Watches used to evaluate variable or expression and their values can be realtime
 
 
 <h2>Debugger Architecture</h2>
-<a href="../images/Speare/debugger.png" target="_blank"><img src="../images/Speare/debugger.png" class="screenshots"/></a><br>
+<a href="../images/speare/debugger.png" target="_blank"><img src="../images/speare/debugger.png" class="screenshots"/></a><br>
 <p><lt>An free small IDE for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl.</lt></p>
 <p>Proposed debugging environment support in Speare code editor are: GDB, LLDB, Ruby, mruby, Lua, Python, Perl, PHP, Tcl, Node.js, Dart, AWK and shell. Speare code editor provides very concise and simple interface to add new programming language in it, end user can very easily write a new programming language parser, syntax highlighting, code formatter and debugger for it, please refer this guide: <a href="http://www.sevenuc.com/download/language_extension_protocol.pdf" target="_blank">language_extension_protocol.pdf</a>.</p>
 
@@ -456,7 +456,7 @@ There're some text in zend engine section should be as same as printed by execut
 
 <p><b>Steps of PHP Debugging with Speare code editor</b>:<br><br>
 <ltab>1. Launch Speare and dragging the PHP source code folder into the "Workspace Explorer".</ltab><br>
-<ltab>2. Select the startup php script and Click <span><img src="../images/Speare/bottom.png" class="button" /></span> siding bottom button to show the debug toolbar and then click "Start" button.</ltab><br>
+<ltab>2. Select the startup php script and Click <span><img src="../images/speare/bottom.png" class="button" /></span> siding bottom button to show the debug toolbar and then click "Start" button.</ltab><br>
 <ltab>3. Launch Safari and request: http://127.0.0.1/xxx/xxx/index.php</ltab><br><br>
 <ltab><em class="green"><b>Note:</b> Don't use localhost but should use 127.0.0.1 instead.</em></ltab><br><br>
 <ltab>4. After Speare paused and highlighting at a special line of your startup PHP script there that means the debugging session started, you can execute the common debugging command now:</ltab><br><br>
