--- a/en/speare.html
+++ b/en/speare.html
@@ -286,7 +286,7 @@ Ensure the formatters correctly working, you should take a look at above directo
 </p>
 
 <h2>Lite Mode</h2>
-<p>Click <span><img src="../images/Speare/left.png" class="button" /></span> siding button on toolbar and then click menu "View → Hide Toolbar".<br>
+<p>Click <span><img src="../images/speare/left.png" class="button" /></span> siding button on toolbar and then click menu "View → Hide Toolbar".<br>
 "Lite Mode" can turn Speare to be a TextEdit-like text editor but has more features, such as line number display, syntax highlighting etc. "Lite Mode" can be remembered and continually keeping, it can be turned off by click menu "View → Show Toolbar". This function is useful and feels more light when open and edit several files but not work on a project that has large number of files.
 </p>
 
