--- a/en/Taihaa.html
+++ b/en/Taihaa.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
 <style type="text/css">
 .none {  padding:0;  margin: 0; }
-.button { width: auto; height: 25pt; vertical-align:middle;padding: 2px 2px 2px 2px;background: rgba(0, 0, 0, 0);}
+.button { background:#333333;width: auto; height: 25pt; vertical-align:middle;padding: 2px 2px 2px 2px;}
 .small { font-size: 12pt;}
 .machine { font-size: 12pt; margin-left: 50pt; }  
 </style>
@@ -101,7 +101,9 @@
 
 
 <h2>商務合作-智慧財產權轉讓</h2>
-<p><img src="../images/Taihaa/fate-machine.png" class="screenshots"/><br>
+<p><img src="../images/Taihaa/fate-machine.png" class="screenshots"/><br></p>
+
+<p>
 <span class="machine">命理分析機模型</span><br>
 本解決方案特意為嵌入式系統而設計，產品可以設計為台式設備或便捷式手持設備，引擎完全採用ANSI C開發，體積小巧，包含命術分析引擎，PDF文檔列印引擎，可以非常方便而快速地開發出消費娛樂設備，如上圖所示。本系統商業前景廣闊，經濟效益巨大，設備適合安置於各種娛樂場所，消費者只需用手機掃描CR碼該機即可列印出精美的「命術分析報告」。本引擎將以源代碼方式進行一次性產權轉讓(出售)，因此購買者可以擁有最大的權利，如有意購買，請進一步聯繫了解詳情。
 </p>
