rename uppercase files

--- a/en/apps.html
+++ b/en/apps.html
@@ -41,8 +41,8 @@
 
 <h2>macOS Apps</h2>
 
-<p class="section"><a href="MathHelfer.html"><img src="../images/MathHelfer/logo.png" class="macapp" /></a>
-<a href="MathHelfer.html"><b>MathHelfer</b></a> is an ultra lightweight word processor help you write well formatted science article in a very light and efficient way without install huge software packages such as TEX and Office Suite.</p>
+<p class="section"><a href="mathHelfer.html"><img src="../images/MathHelfer/logo.png" class="macapp" /></a>
+<a href="mathHelfer.html"><b>MathHelfer</b></a> is an ultra lightweight word processor help you write well formatted science article in a very light and efficient way without install huge software packages such as TEX and Office Suite.</p>
 
 
 <p class="section"><a href="speare.html"><img src="../images/speare/logo.png" class="macapp" /></a>
@@ -67,8 +67,8 @@
 <a href="uftp.html"><b>uFTP Server</b></a> is a very simple personal FTP Server designed for macOS without any user authentication, without complex and boring configuration, but still has very high performance.
 </p>
 
-<p class="section"><a href="Taihaa.html"><img src="../images/Taihaa/logo.png" class="macapp" /></a>
-<a href="Taihaa.html"><b>Taihaa</b></a> is a fate telling app. It's a high precision fate analysis engine and high accuracy fate telling app designed for embedded systems that can be developed as standalone machine or handheld device. Consumers only needs to scan the CR code with their mobile phone and then the machine can print beautifully fate analysis report.
+<p class="section"><a href="taihaa.html"><img src="../images/Taihaa/logo.png" class="macapp" /></a>
+<a href="taihaa.html"><b>Taihaa</b></a> is a fate telling app. It's a high precision fate analysis engine and high accuracy fate telling app designed for embedded systems that can be developed as standalone machine or handheld device. Consumers only needs to scan the CR code with their mobile phone and then the machine can print beautifully fate analysis report.
 </p>
 
 <p><br></p>
