--- a/en/speare.html
+++ b/en/speare.html
@@ -127,19 +127,19 @@ The free small IDE for scripting languages.
 <h2>Features</h2>
 <p><ul>
 <li>Well designed user operation interface. Intuitive and simple.</li>
-<li>High performance of managing large amount of files and big files.</li>
+<li>High performance when managing large amount of files and big files.</li>
 <li>Fast search and replace in current document, selected folder, opened files and entire project.</li>
-<li>Smoothly edit multiple files that written in different programming languages simultaneously.</li>
+<li>Smoothly editing multiple files that written in different programming languages simultaneously.</li>
 <li>Supports almost all common programming languages syntax highlighting and parsing.</li>
 <li>Auto-completion, sensitively typing with keywords, live parsing symbol definition with priority.</li>
 <li>Jump to definition and fast locate code lines between editing files by symbol index, bookmark or searching.</li>
 <li>Unlimited go back and forward, automatically remember jump location and current editing locations.</li>
 <li>Keeping entire state after quit, the opened files, selection of each file and the cursor location.</li>
 <li>Fonts and colours customisation, supports self-defined schemes.</li>
-<li>Full featured markdown editor, run Javascript code instantly, well support Web development.</li>
+<li>Full featured Markdown editor, run Javascript code instantly, well supports Web development.</li>
 <li>Code block selection by double clicking the begin symbol of code block.</li>
-<li>Run syntax checking and editing code instantly.</li>
-<li>Preview all kinds of files, image, pdf, office documents, audio and video etc.</li>
+<li>Run syntax checking of the editing code instantly.</li>
+<li>Preview or playback all kinds of files, image, pdf, office documents, audio and video etc.</li>
 <li>Ultra lightweight.</li>
 </ul></p>
 
@@ -257,9 +257,11 @@ Put you customised colour scheme in the following directory:<br>
 </p>
 
 <h2>Markdown &amp; HTML</h2>
-<p>1. <b>Preview</b>: select menu "View"  →  "Preview", see html or markdown file rendered in builtin web browser instantly.<br>
+<p>Speare code editor is a full featured Markdown editor. 
+It supports previewing the editing Markdown document instantly and also well supports HTML document editing.</p>
+<p>1. <b>Preview</b>: select menu "View"  →  "Preview", see HTML or Markdown file rendered by the builtin web browser instantly.<br>
 2. <b>Close Preview</b>: select menu "View"  →  "Close Preview", close the opened builtin web browser.<br>
-3. <b>Save Markdown</b>: select menu "View"  →  "Save Markdown", save the generated html to local file, Speare has a builtin converter that can convert markdown to html instantly.</p>
+3. <b>Save Markdown</b>: select menu "View"  →  "Save Markdown", save the generated html to local file, Speare has a builtin converter that can convert Markdown to HTML instantly.</p>
 <p class="green"><span><img src="../images/speare/tips.png" class="tips" /><b>Note:</b> a. supported file extensions: .htm, .html, .md, .mdown, .markdown.<br>
 <span style="margin-left:68px;"> b. click any file item in the left side Treeview will also close preview automatically.</span></p>
 
