--- a/en/tungsyu.html
+++ b/en/tungsyu.html
@@ -21,7 +21,7 @@
 .map { max-width: 700px;}
 </style>
 
-<title> Tungsyu </title>
+<title>Tungsyu</title>
 </head>
 <body>
 
@@ -69,7 +69,7 @@
 
 
 <h2>引用</h2>
-<p><a href="Taihaa.html">Taihaa「睇哈」</a>, 娛樂性質的嚴肅命理分析工具。 (High accuracy fate telling app, a serious app developed just for fun.)</p>
+<p><a href="taihaa.html">Taihaa「睇哈」</a>, 娛樂性質的嚴肅命理分析工具。 (High accuracy fate telling app, a serious app developed just for fun.)</p>
 
 <p><br></p>
 <p><audio autoplay loop preload="none"><source src="../audio/bamboo.mp3" type="audio/mpeg" /></audio></p>
