--- a/en/taihaa.html
+++ b/en/taihaa.html
@@ -118,7 +118,7 @@
 
 
 <h2>引用</h2>
-<p><a href="Tungsyu.html">Tungsyu「通書」</a>, 農曆資訊查詢工具。 The Calendar of Yangtze River.</p>
+<p><a href="tungsyu.html">Tungsyu「通書」</a>, 農曆資訊查詢工具。 The Calendar of Yangtze River.</p>
 
 <p><br></p>
 <p><audio autoplay loop preload="none"><source src="../audio/bamboo.mp3" type="audio/mpeg" /></audio></p>
